name:                interface-glfw
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SwiftsNamesake/interface-glfw#readme
license:             BSD3
license-file:        LICENSE
author:              Jonatan Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           2017 Jonatan Sundqvist
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.UIKit
  build-depends:       base >= 4.7 && < 5
                     , either
                     , text
                     , transformers
                     , microlens
                     , safe-exceptions
                     , Rasterific
                     , OpenGL
                     , stm
                     , GLFW-b
                     , containers
                     , linear
                     , linear-aabb

executable interface-glfw
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interface-glfw
  default-language:    Haskell2010

test-suite interface-glfw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interface-glfw
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/interface-glfw
