name:                interface-glfw
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SwiftsNamesake/interface-glfw#readme
license:             BSD3
license-file:        LICENSE.md
author:              Jonatan Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           2017 Jonatan Sundqvist
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.UIKit
                     , Graphics.UIKit.Types
                     , Graphics.UIKit.Lenses
                     , Control.Loops
                     , Data.Chroma
  build-depends:       base >= 4.7 && < 5
                     , either
                     , vector
                     , text
                     , bytestring
                     , transformers
                     , microlens-platform
                     , monad-loops
                     , safe-exceptions
                     , Rasterific
                     , OpenGL
                     , JuicyPixels
                     , FontyFruity
                     , GLFW-b
                     , stm
                     , async
                     , containers
                     , linear
                     , random
                     , linear-aabb
                     , cubist-sculptor
  default-language:    Haskell2010

executable tic-tac-toe
  hs-source-dirs:      app
  main-is:             TicTacToe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , containers
                     , linear
                     , microlens-platform
                     , JuicyPixels
                     , FontyFruity
                     , Rasterific
                     , GLFW-b
                     , linear-aabb
                     , interface-glfw
  default-language:    Haskell2010

executable chess
  hs-source-dirs:      app
  main-is:             Chess.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , linear
                     , microlens-platform
                     , JuicyPixels
                     , FontyFruity
                     , Rasterific
                     , GLFW-b
                     , linear-aabb
                     , interface-glfw
  default-language:    Haskell2010

executable life
  hs-source-dirs:      app
  main-is:             Life.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , repa
                     , linear
                     , microlens-platform
                     , JuicyPixels
                     , FontyFruity
                     , Rasterific
                     , GLFW-b
                     , linear-aabb
                     , interface-glfw
  default-language:    Haskell2010


test-suite interface-glfw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interface-glfw
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/interface-glfw
